# advent_of_code

./: README.md  day1.py  day2.py  day4.py  env.yaml  pyproject.toml
2015/: day2.py  day3.py
2015/01/: day1.py  main.py
2015/02/: day2.py  main.py
2015/03/: day3.py  main.py
2015/04/: day4.py  main.py
2015/05/: main.py
2015/06/: main.py
2015/07/: main.py
2015/08/: b.py  main.py
2015/09/: main.py
2015/10/: main.py
2015/11/: main.py
2015/12/: main.py
2015/13/: main.py
2015/14/: main.py
2015/15/: main.py
2015/16/: main.py
2015/17/: main.py
2015/18/: main.py
2015/19/: main.py
2015/20/: main.py
2015/21/: main.py
2015/22/: main.py
2015/23/: main.py
2015/24/: main.py
2015/25/: main.py
2016/01/: main.py
2016/02/: main.py
2016/03/: main.py
2016/04/: main.py
2016/05/: main.py
2016/06/: main.py
2016/07/: main.py
2016/08/: main.py
2016/09/: main.py
2016/10/: main.py
2017/01/: main.py
2017/02/: main.py
2017/03/: main.py
2017/04/: main.py
2018/01/: main.py
2018/02/: main.py
2018/03/: main.py
2019/01/: day1.py  main.py
2019/02/: day2.py  main.py
2019/03/: main.py
2019/04/: day4.py  main.py
2020/: day6.py
2020/01/: day1.py  main.py
2020/02/: day2.py  main.py
2020/03/: day3.py  main.py
2020/04/: day4.py  main.py
2020/05/: day5.py  main.py
2020/06/: day6.py  main.py
2022/01/: main.py
2022/02/: main.py
2022/03/: main.py
2022/04/: main.py
2022/05/: main.py
2022/06/: main.py
2022/07/: main.py
2022/08/: cheat.py  main.py
2022/09/: main.py
2022/10/: main.py
(+19 files in other folders)
