[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Submissions to the https://adventofcode.com/"
authors = ["Igor Oliveira <mail@igoroliveira.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
methodtools = "^0.4.5"
networkx = "^2.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
