[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Submissions to the https://adventofcode.com/"
authors = ["Igor Oliveira <mail@igoroliveira.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
methodtools = "^0.4.5"
networkx = "^2.8.8"
more-itertools = "^9.0.0"
matplotlib = "^3.6.2"
pydot = "^1.4.2"
dot-plot = "^0.1.3.1"
dott = "^1.1.1"
py-dot = "^0.5.0"
scipy = "^1.9.3"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
