[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "ipython>=8.30.0",
    "isort>=5.13.2",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
